<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 Jeff Sharkey, http://jsharkey.org/

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:padding="20dip"
                android:textSize="16sp"
                android:text="@string/info_inserting" />

            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:text="@string/info_credits_title"
                style="?android:attr/listSeparatorTextViewStyle" />

            <TextView
                android:id="@+id/info_credits"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:padding="20dip"
                android:textSize="16sp"
                android:text="@string/info_credits"
                android:autoLink="web" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:style/ButtonBar">

        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="0.25" />

        <Button
            android:id="@+id/info_done"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/info_done" />

        <View
            android:layout_width="0dip"
            android:layout_height="0dip"
            android:layout_weight="0.25" />

    </LinearLayout>

</LinearLayout>
